# rs_rpg

./: Cargo.toml  readme.md
src/: main.rs
src/actors/: base_enemy.rs  base_npc.rs  mod.rs  models.rs  player.rs
src/common/: Cargo.toml  readme.md
src/common/src/: dbl_buffer.rs  event_system.rs  lib.rs  shader_pipeline_builder.rs  texture_manager.rs  timing_manager.rs  viewport.rs
src/equipment/: equipment_manager.rs  mod.rs
src/equipment/armor/: mod.rs
src/equipment/armor/torso/: mod.rs  sacrificial_robes.rs
src/equipment/weapons/: mod.rs
src/equipment/weapons/dagger/: mod.rs  sacrificial_dagger.rs
src/shaders/: test_shader.wgsl
src/state_management/: mod.rs  player_state.rs
src/story_tree/: mod.rs  story_management.rs
src/textures/: cobble_stone.rs  mod.rs  utils.rs
